
# 0,1,0,20201029
	Atach picked object in Edit mode like 3DsMax`s edit poly attach (object mode and Edit mode in Quad menu).
	Same Attach function added for Curve & Armature too.
	ObjectPicker Operator updated.
	Pivot to First Bezier point issue fixed (Ctrl + Insert in set pivot point menu).
	Bugfix.

# 0,1,0,20201028
	Default auto smooth fixed for Torus, Teapot, Monkey primitives.
	Bugfix.

# 0,1,0,20201026 and befor
	Align Objects has better UI and able to Align Objects to Bone of Armature too.
	Primitive Geometries create and update with Shade Smooth active.
	Join (ctrl+J) clear primitive data now.
	Object display setiing assined to 'Alt+X'.
	Path Sort Operator updated (Select objects call the operator then pick path)
	PickOperator bug fixed.
	Linkto Operator now can link Object directly to a bone.
	PickOperator updated, now can return source, subsource, target and subtarget.
	New Hotkeys added to weight paint and File Browser (Max mode only).
	Camera search any object display filter toggle Keymaps added for paint/sculp modes too.
	Timeline Red header issue fixed.
	Path Constraint setting up a "Follow Path" in two clicks and set the key frame on Object rather than the path.
	Parent Constraint in object mode can directly parent the Objects to the Bone rather than Armature.
	View3D/Tools/Animation Max like Constraints tools added.
	In Pose mode Doubleclick Select All children.
	if you dont like the infinit gride then press 'G' to have a limited one.
	Jotstick connector updated for work with new Joystick creator.
	Joystick creator made a controller from Armatur can be join with rigg
	Pose menu added to Quadmenu and some Keymap added for Pose mode.
	Select Element enabled for Curve mode too ('5' Toggle On/Off)
	Select Element enabled for 3DsMax mode ('5' Toggle On/Off, 'Ctrl + 5' Open Setting Dialog)
	Open the keymaps list in github wiki via addon preferences (In production).
	Preferences UI changed, more optional and easy to understand.